styles/styles.scss
/* ... */
/* End of Contact Section */

/* Scrollbar for the Header Section */
/* Hide scrollbar by default */
//.header::-webkit-scrollbar {
  //width: 0;
  //background: transparent;
//}

/* For screens smaller than or equal to 768px (cellphones and tablets) */
//@media (max-width: 768px) {
  /* Show scrollbar */
  //.header::-webkit-scrollbar {
    //width: 8px; // Set width to your desired width
    //background: transparent; // Set background color to transparent
  //}

  /* Style scrollbar track */
  //.header::-webkit-scrollbar-track {
    //background: transparent; // Set background color to transparent
  //}

  /* Style scrollbar thumb */
  //.header::-webkit-scrollbar-thumb {
    //background: #888; // Set color of the scrollbar thumb
    //border-radius: 4px; // Set border radius
  //}

  /* Style scrollbar thumb on hover */
  //.header::-webkit-scrollbar-thumb:hover {
    //background: #555; // Set color of the scrollbar thumb on hover
  //}
//}
/* End of Scrollbar for the Header Section */

/*Scrollbar for the About Section */
/* Hide scrollbar by default */
//body::-webkit-scrollbar {
  //width: 0;
  //background: transparent;
//}

/* Hide scrollbar */
//body::-webkit-scrollbar {
  //width: 10px; // Set width to 0
  //background: transparent; // Set background color to transparent
//}

// For screens smaller than or equal to 768px (cellphones and tablets)
//@media (max-width: 768px) {
  /* Show scrollbar */
  //body::-webkit-scrollbar {
    //width: 10px; // Set width to your desired width
    //background: transparent; // Set background color to transparent
  //}

  /* Style scrollbar track */
  //body::-webkit-scrollbar-track {
    //background: var(--color-grey-5)
    //background: transparent; // Set background color to transparent
  //}

  /* Style scrollbar thumb */
  //body::-webkit-scrollbar-thumb {
    //background: var(--color-grey-4); // Set color of the scrollbar thumb
    //border-radius: 5px; // Set border radius
  //}

  /* Style scrollbar thumb on hover */
  //body::-webkit-scrollbar-thumb:hover {
    //background: var(--color-grey-4); // Set color of the scrollbar thumb on hover
  //}
//}
/*End of the Scrollbar for the About Section */

/* Header Section */
// For screens smaller than or equal to 768px (cellphones and tablets)
//@media (max-width: 768px) {
  //.header-content {
    //grid-template-columns: 1fr; // Change grid to single column layout
    //padding: 3rem 1rem; // Adjust padding for header content
  //}

  //.left-header {
    //.image {
     // width: 100%; // Make the image fill the entire width
      //margin-left: auto;
      //margin-right: auto;
    //}
  //}

  //.right-header {
    //padding-right: 1rem; // Adjust padding for right header
    //padding-top: 1rem; // Add top padding for better spacing
    //width: 100%; // Ensure the content takes full width
    //text-align: center; // Center-align the content
  //}

  //.name {
    //font-size: 0.7rem; // Adjust font size for smaller screens
    //margin-bottom: 0.5rem; // Add margin to bottom for better spacing
  //}

  //.right-header > p {
    //font-size: 0.9rem; // Adjust font size for smaller screens
    //margin-bottom: 1rem; // Add margin to bottom for better spacing
  //}
//}
/* End of the Header Section */



/* About Section */
/* For screens smaller than 768px (standard tablets and below) */
@media (max-width: 768px) {
  .header-content {
    padding: 3rem 1rem; /* Adjust padding for header content */
  }

  .left-header {
    display: flex;
    align-items: center;
    position: relative;
    .image {
      border-radius: var(--br-sm-2);
      height: 90%;
      width: 68%;
      margin-left: auto;
      margin-right: auto;
      background-color: var(--color-black);
      transition: all .4s ease-in-out;
      img {
        width: 100%;
        height: 100%;
        object-fit: cover;
        transition: all .4s ease-in-out;
      }
    }
  }

  .about-col-1 {
    flex-basis: 100%; /* Set full width for smaller screens */
    margin-bottom: 2rem; /* Add margin to separate image from text */
    img {
      width: 100%; /* Make image fill the entire width of its container */
      border-radius: var(--br-sm-2);
    }
  }

  .about-col-2 {
    flex-basis: 100%; /* Set full width for smaller screens */
    max-width: 100%; /* Ensure text column takes full width */
    margin-top: 0; /* Add margin to separate text from image */
  }
  .sub-title{
    font-size: 3rem;
    margin-top: 1rem;
  }
  .summary{
    font-size: 1rem;
    text-align: justify; //Justify content
  }
}

/* For screens smaller than 480px (standard smartphones) */
@media (max-width: 480px) {
  .sub-title {
    font-size: 40px; /* Decrease font size for smaller screens */
  }

  .right-header {
    padding-right: 0; /* Remove right padding on right-header */
  }
}
/*End of the About Section */

/* Start of Mobile View of Services Section */
@media only screen and (max-width: 850px){
  #services {
    padding: 50px 15px;
  }

  #services .service-row {
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 15px;
  }
}

@media only screen and (max-width: 550px) {
  #services .service-row {
    grid-template-columns: repeat(1, 1fr);
    grid-gap: 15px;
  }
}
/* End of Mobile View of Services Section */

@import './media';

